--- a/app/css/app.css
+++ b/app/css/app.css
@@ -8,115 +8,115 @@
     .navbar {
         border-radius: 0;
     }
+}
 
-    .navbar-text {
-        font-size: 100%;
-    }
+.navbar-text {
+    font-size: 100%;
+}
 
-    .alert {
-        margin-bottom: 0;
-    }
+.page-header.secondaire  {
+    margin-top: 0;
+}
 
-    .ng-toast__message.alert.alert-dismissible {
-        padding: 0;
-    }
+.alert {
+    margin-bottom: 0;
+}
 
-    .loginUpdate {
-        margin-bottom: 1.5em;
-        margin-top: 1em;
-    }
+.ng-toast__message.alert.alert-dismissible {
+    padding: 0;
+}
 
-    .cat {
-        cursor: pointer;
-    }
+.loginUpdate {
+    margin-bottom: 1.5em;
+    margin-top: 1em;
+}
 
-    .rowForm {
-        margin-bottom: 1em;
-    }
+.cat {
+    cursor: pointer;
+}
 
-    .side-bar {
-        margin-top: 10vh;
-    }
+.rowForm {
+    margin-bottom: 1em;
+}
 
-    .srcInput {
-        margin-bottom: 10vh;
-    }
+.side-bar {
+    margin-top: 10vh;
+}
 
-    .newsContent {
-        max-height: 80vh;
-        overflow: scroll;
-    }
+.srcInput {
+    margin-bottom: 10vh;
+}
 
-    .preview {
-        max-height: 10vh;
-        overflow: hidden;
-    }
+.newsContent {
+    max-height: 80vh;
+    overflow: scroll;
+}
 
-    .infoUser {
-        padding-top: 4em;
-    }
+.preview {
+    max-height: 10vh;
+    overflow: hidden;
+}
 
-    .dropText {
-        height: 200px;
-    }
+.infoUser {
+    padding-top: 4em;
+}
 
-    .dropText p.lead.imgArticle {
-        border: 0.1em dashed grey;
-        border-radius: 20%;
-        width: 200px;
-        height: 200px;
-        margin: auto;
-        font-size: 120%;
-        padding-top: 4.5em;
-    }
+.dropzone.p.lead.imgArticle {
+    border: 0.1em dashed grey;
+    border-radius: 20%;
+    width: 200px;
+    height: 200px;
+    margin: auto;
+    font-size: 120%;
+    padding-top: 4.5em;
+}
 
-    .dropImg.imgArticle {
-        border: 0.1em dashed grey;
-        border-radius: 50%;
-        width: 200px;
-        height: 200px;
-        margin: auto;
-    }
+.dropImg.imgArticle {
+    border: 0.1em dashed grey;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin: auto;
+}
 
 
-    .dropText p.lead {
-        border: 0.1em dashed grey;
-        border-radius: 20%;
-        width: 140px;
-        height: 140px;
-        margin: auto;
-        font-size: 120%;
-        padding-top: 4.5em;
-    }
+.dropzone.lead {
+    border: 1px dashed grey;
+    border-radius: 49%;
+    width: 140px;
+    height: 140px;
+    margin: auto;
+    font-size: 120%;
+    padding-top: 3.5em;
+}
 
-    .dropImg {
-        border: 0.1em dashed grey;
-        border-radius: 50%;
-        width: 140px;
-        height: 140px;
-        margin: auto;
-    }
+.dropImg {
+    border: 0.1em dashed grey;
+    border-radius: 50%;
+    width: 140px;
+    height: 140px;
+    margin: auto;
+}
 
-    .dropImgAdmin {
-        border: 0.1em dashed grey;
-        border-radius: 50%;
-        width: 200px;
-        height: 200px;
-        margin: auto;
-    }
+.dropImgAdmin {
+    border: 0.1em dashed grey;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin: auto;
+}
 
-    .dragover {
-        border: 0.1em dashed black;
-        opacity: 0.4;
-    }
+.dragover {
+    border: 0.1em dashed black;
+    opacity: 0.4;
+}
 
-    .has-feedback .form-control-feedback {
-        top:0px;
-        z-index: 2;
-    }
+.has-feedback .form-control-feedback {
+    top:0px;
+    z-index: 2;
+}
 
-    .validationError {
-        color: red;
-        display: block;
-    }
+.validationError {
+    color: red;
+    display: block;
 }
