--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -1,53 +1,55 @@
 <div class="container text-center" ng-controller="ProfilCtrl">
 	
-	<div class="panel panel-info">
+	<div class="page-header">
+		<h1> Edit your profil ! </h1>
+	</div>
 
-		<div class="panel-heading">
-			<h1> Edit your profil ! </h1>
-		</div><!-- class panel-heading -->
+	<div class="container">
+		
+		<div class="row">
+			<div class="col-md-12">
 
-		<div class="panel-body">
+				<!-- Drag & Drop Zone -->
+				<div ng-file-drop class="drop-box" ng-file-select ng-model="files" drag-over-class="dragover" allow-dir="true" accept="image/*,application/pdf">
+					<p class="dropzone lead" ng-hide="currentUser.img"> Drop or click ! <span class="glyphicon glyphicon-cloud-download"></span></p>
+					<img class="dropImg" ng-show="currentUser.img" ng-src="{{currentUser.img}}"/>
+					<h6 class="text-info" ng-show="currentUser.img"><em>* Click on your picture / username to Edit it! </em></h6>
+				</div><!-- class drop-box -->
 
-			<div class="row">
+				<!-- Username / Upadate -->
+				<p class="lead" ng-hide="updateLogin || !currentUser.username" ng-click="showInput()"> {{currentUser.username | uppercase}} </p>
+				<div class="input-group col-md-4 col-md-offset-4 loginUpdate" ng-show="updateLogin || !currentUser.username">
+					<input ng-model="user.username" value="" class="form-control lead" type="text" placeholder="New Login..."/>
+					<span class="input-group-btn">
+						<button class="btn btn-info" ng-click="loginUpdate()" type="button"><span class="glyphicon glyphicon-ok"></span></button>
+					</span><!-- class input-group-btn -->
+				</div><!-- /input-group -->
 
-				<!-- Drag and Drop / Infos User -->
-				<div class="col-md-6">
+			</div><!-- class col-md-12 -->
+		</div><!-- class row -->
 
-					<div class="col-md-6">
-						<h2 ng-hide="updateLogin || !currentUser.username" class="lead" ng-click="showInput()"> {{currentUser.username}} </h2>
 
-						<div class="input-group loginUpdate" ng-show="updateLogin || !currentUser.username">
-							<input ng-model="user.username" value="" class="form-control lead" type="text" placeholder="New Login..."/>
-							<span class="input-group-btn">
-								<button class="btn btn-info" ng-click="loginUpdate()" type="button"><span class="glyphicon glyphicon-ok"></span></button>
-							</span><!-- class input-group-btn -->
-						</div><!-- /input-group -->
+		<!-- MOBILE VERSION -->
+		<div class="row visible-xs">
 
-						<div ng-file-drop class="drop-box" ng-file-select ng-model="files" drag-over-class="dragover" allow-dir="true" accept="image/*,application/pdf">
-							<div class="dropText" ng-hide="currentUser.img"><p class="lead"> Drop your picture ! (or click) <span class="glyphicon glyphicon-cloud-download"></span></p></div>
-							<img class="dropImg" ng-show="currentUser.img" ng-src="{{currentUser.img}}"/>
-						</div><!-- class drop-box -->
+			<div class="btn-group" role="group" aria-label="...">
+				<a class="btn btn-default" data-toggle="collapse" data-target="#infos" aria-expanded="false" aria-controls="infos"> Profil Informations </a>
+				<a class="btn btn-default" data-toggle="collapse" data-target="#changePwd" aria-expanded="false" aria-controls="changePwd"> Change Password </a>
+			</div>
 
-						<h6 class="text-info" ng-show="currentUser.img"><em>* Click on your picture to Edit it! </em></h6>
-						<h6 class="text-danger"><em>* Account created {{currentUser.created_at}} </em></h6>
+			<div class="collapse" id="infos">
+				<div class="jumbotron">
+					<p class="text-left"> {{currentUser.firstname}} </p>
+					<p class="text-left"> {{currentUser.lastname | uppercase}} </p>
+					<p class="text-left"> {{currentUser.email}} </p>
+				</div>
+			</div>
 
-					</div><!-- class col-md-6 -->
-
-					<div class="col-md-6 infoUser">
-						<p class="text-left well well-sm"> {{currentUser.firstname}} </p>
-						<p class="text-left well well-sm"> {{currentUser.lastname}} </p>
-						<p class="text-left well well-sm"> {{currentUser.email}} </p>
-					</div><!-- class col-md-6 infoUser -->
-
-				</div><!-- class col-md-6 -->
-
-				<!-- Change password part -->
-				<div class="col-md-6">
-
-					<h2 class="lead"> Change your password : </h2>
+			<div class="collapse" id="changePwd">
+				<div class="jumbotron">
 					<form novalidate name="changePasswordForm" ng-submit="confirm && changePasswordForm.$valid && updatePassword(pwd)">
 
-						<div  class="col-md-8 col-md-offset-2">
+						<div class="col-md-10 col-md-offset-1">
 							<div class="form-group has-feedback" ng-class="{'has-success': changePasswordForm.current.$valid, 'has-error': !changePasswordForm.current.$valid && changePasswordForm.current.$dirty}">
 								<label class="control-label sr-only" for="Current"> Current </label>
 								<div class="input-group">
@@ -62,9 +64,9 @@
 								<span class="validationError" ng-show="changePasswordForm.current.$error.maxlength">* The current can't be more than 100 characters</span>
 								<span class="validationError" ng-show="changePasswordForm.current.$error.required && changePasswordForm.current.$dirty">* The current is required</span>
 							</div><!-- class form-group -->
-						</div><!--  class col-md-8 col-md-offset-2 -->
+						</div><!--  class col-md-10 col-md-offset-1 -->
 
-						<div  class="col-md-8 col-md-offset-2">
+						<div class="col-md-10 col-md-offset-1">
 							<div class="form-group has-feedback" ng-class="{'has-success': changePasswordForm.password.$valid, 'has-error': !changePasswordForm.password.$valid && changePasswordForm.password.$dirty}">
 								<label class="control-label sr-only" for="Author"> New </label>
 								<div class="input-group">
@@ -79,9 +81,9 @@
 								<span class="validationError" ng-show="changePasswordForm.password.$error.maxlength">* The password can't be more than 100 characters</span>
 								<span class="validationError" ng-show="changePasswordForm.password.$error.required && changePasswordForm.password.$dirty">* The password is required</span>
 							</div><!-- class form-group -->
-						</div><!-- class col-md-8 col-md-offset-2 -->
+						</div><!-- class col-md-10 col-md-offset-1 -->
 
-						<div class="col-md-8 col-md-offset-2">
+						<div class="col-md-10 col-md-offset-1">
 							<div class="form-group has-feedback" ng-class="{'has-success': changePasswordForm.confirm.$valid && confirm, 'has-error': (!changePasswordForm.confirm.$valid || !confirm) && changePasswordForm.confirm.$dirty}">
 								<label class="control-label sr-only" for="Author"> Confirm </label>
 								<div class="input-group">
@@ -96,31 +98,128 @@
 								<span class="validationError" ng-show="!confirm && changePasswordForm.confirm.$dirty">* The two passwords have to match</span>
 								<span class="validationError" ng-show="changePasswordForm.confirm.$error.maxlength">* The password can't be more than 100 characters</span>
 							</div><!-- class form-group -->
-						</div><!--  class col-md-8 col-md-offset-2 -->
+						</div><!--  class col-md-10 col-md-offset-1 -->
 
 						<!-- Submit -->
 						<div class="col-md-12">
 							<button class="btn btn-success btn-md" type="submit"> Change </button>
 						</div><!-- class col-md-4 col-md-offset-7 -->
 
-					</form>
+					</form><!-- class changePasswordForm -->
+				</div><!-- class jumbotron -->
+			</div><!-- class collapse -->
 
-				</div><!-- class col-md-6 -->
+		</div><!-- class row visible-xs -->
 
-				<div class="col-md-12">
-					<button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal"> Delete Account </button>
-				</div><!-- col-md-12 -->
+		<div class="row hidden-xs">
+			<div class="col-md-12">
 
-			</div><!-- class row -->
+				<!-- Informations part -->
+				<div class="col-md-5 col-md-offset-1">
 
-		</div><!-- class panel-body -->
+					<div class="page-header secondaire">
+						<h1 class="text-left"><small> Informations : </small></h1>
+					</div><!-- class page-header secondaire -->
 
-	</div><!-- class panel panel-info -->
+					<div class="col-md-10">
+						<p class="text-left well well-sm"> {{currentUser.firstname}} </p>
+					</div><!-- class col-md-10 -->
+
+					<div class="col-md-10">
+						<p class="text-left well well-sm"> {{currentUser.lastname | uppercase}} </p>
+					</div><!-- class col-md-10 -->
+
+					<div class="col-md-10">
+						<p class="text-left well well-sm"> {{currentUser.email}} </p>
+					</div><!-- class col-md-10 -->
+
+				</div><!-- class col-md-5 col-md-offset-1 -->
+
+				<!-- Change password part -->
+				<div class="col-md-5 col-md-offset-1">
+					
+					<div class="page-header secondaire">
+						<h1 class="text-left"><small> Change your password : </small></h1>
+					</div><!-- class page-header secondaire -->
+
+					<form novalidate name="changePasswordForm" ng-submit="confirm && changePasswordForm.$valid && updatePassword(pwd)">
+
+						<div class="col-md-10">
+							<div class="form-group has-feedback" ng-class="{'has-success': changePasswordForm.current.$valid, 'has-error': !changePasswordForm.current.$valid && changePasswordForm.current.$dirty}">
+								<label class="control-label sr-only" for="Current"> Current </label>
+								<div class="input-group">
+									<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+									<input type="password" class="form-control" ng-model="pwd.current" name="current" id="current" placeholder="Current..." ng-minlength="8" ng-maxlength="100" ng-change="passwordUnique()" aria-describedby="currentStatus" required>
+								</div><!-- class input-group -->
+								<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="changePasswordForm.current.$valid" aria-hidden="true"></span>
+								<span id="currentStatus" class="sr-only">(success)</span>
+								<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!changePasswordForm.current.$valid && changePasswordForm.current.$dirty" aria-hidden="true"></span>
+								<span id="currentStatus" class="sr-only">(warning)</span>
+								<span class="validationError" ng-show="changePasswordForm.current.$error.minlength">* The current has to be a least 8 characters</span>
+								<span class="validationError" ng-show="changePasswordForm.current.$error.maxlength">* The current can't be more than 100 characters</span>
+								<span class="validationError" ng-show="changePasswordForm.current.$error.required && changePasswordForm.current.$dirty">* The current is required</span>
+							</div><!-- class form-group -->
+						</div><!--  class col-md-10 -->
+
+						<div class="col-md-10">
+							<div class="form-group has-feedback" ng-class="{'has-success': changePasswordForm.password.$valid, 'has-error': !changePasswordForm.password.$valid && changePasswordForm.password.$dirty}">
+								<label class="control-label sr-only" for="Author"> New </label>
+								<div class="input-group">
+									<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+									<input type="password" class="form-control" ng-model="pwd.password" name="password" id="password" placeholder="New..." ng-minlength="8" ng-maxlength="100" aria-describedby="passwordStatus" required>
+								</div><!-- class input-group -->
+								<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="changePasswordForm.password.$valid" aria-hidden="true"></span>
+								<span id="passwordStatus" class="sr-only">(success)</span>
+								<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!changePasswordForm.password.$valid && changePasswordForm.password.$dirty" aria-hidden="true"></span>
+								<span id="passwordStatus" class="sr-only">(warning)</span>
+								<span class="validationError" ng-show="changePasswordForm.password.$error.minlength">* The password has to be a least 8 characters</span>
+								<span class="validationError" ng-show="changePasswordForm.password.$error.maxlength">* The password can't be more than 100 characters</span>
+								<span class="validationError" ng-show="changePasswordForm.password.$error.required && changePasswordForm.password.$dirty">* The password is required</span>
+							</div><!-- class form-group -->
+						</div><!-- class col-md-10 -->
+
+						<div class="col-md-10">
+							<div class="form-group has-feedback" ng-class="{'has-success': changePasswordForm.confirm.$valid && confirm, 'has-error': (!changePasswordForm.confirm.$valid || !confirm) && changePasswordForm.confirm.$dirty}">
+								<label class="control-label sr-only" for="Author"> Confirm </label>
+								<div class="input-group">
+									<span class="input-group-addon"><span class="glyphicon glyphicon-ok"></span></span>
+									<input type="password" class="form-control" ng-model="pwd.confirm" name="confirm" id="confirm" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" aria-describedby="confirmStatus" ng-change="checkPassword(pwd)" required>
+								</div><!-- class input-group -->
+								<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="changePasswordForm.confirm.$valid && confirm" aria-hidden="true"></span>
+								<span id="confirmStatus" class="sr-only">(success)</span>
+								<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="(!changePasswordForm.confirm.$valid || !confirm) && changePasswordForm.confirm.$dirty" aria-hidden="true"></span>
+								<span id="confirmStatus" class="sr-only">(warning)</span>
+								<span class="validationError" ng-show="changePasswordForm.confirm.$error.minlength">* The password has to be a least 8 characters</span>
+								<span class="validationError" ng-show="!confirm && changePasswordForm.confirm.$dirty">* The two passwords have to match</span>
+								<span class="validationError" ng-show="changePasswordForm.confirm.$error.maxlength">* The password can't be more than 100 characters</span>
+							</div><!-- class form-group -->
+						</div><!--  class col-md-10 -->
+
+						<!-- Submit -->
+						<div class="col-md-10">
+							<button class="btn btn-success btn-md" type="submit"> Change </button>
+						</div><!-- class col-md-4 col-md-offset-7 -->
+
+					</form><!-- class changePasswordForm -->
+
+				</div><!-- class col-md-5 col-md-offset-1 -->
+
+			</div><!-- col-md-12 -->
+		</div><!-- class row -->
+
+		<div class="row">
+			<div class="col-md-12">
+				<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal"> Delete Account </button>
+				<h6 class="text-danger"><em> * Account created {{currentUser.created_at}} </em></h6>
+			</div>
+		</div>
+
+	</div><!-- class container -->
 
 </div><!-- class container text-center -->
 
 <script type="text/javascript">
-	jQuery(function($) {
-		jQuery.event.props.push('dataTransfer');
-	});
+jQuery(function($) {
+	jQuery.event.props.push('dataTransfer');
+});
 </script>
