--- a/app/partials/client-news-feed.html
+++ b/app/partials/client-news-feed.html
@@ -5,7 +5,7 @@
 			
 			<div class="col-md-12 srcInput">
 				<div class="input-group">
-					<input type="search" class="form-control" placeholder="Looking for a news ?">
+					<input type="search" ng-model="search.title" class="form-control" placeholder="Looking for a news ?">
 					<span class="input-group-btn">
 						<button class="btn btn-default" type="button">
 							<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
@@ -40,7 +40,7 @@
 
 				<!-- All News -->
 				<div class="newsContent panel-body" ng-hide="showArticle">		
-					<div id="{{article.id}}" class="media well" ng-repeat="article in articles track by article.id">
+					<div id="{{article.id}}" class="media well" ng-repeat="article in articles | filter:{title: search.title} track by article.id">
 						<div class="pull-left media-middle">
 							<img class="media-object" ng-src="{{article.img_path}}" alt="" width="300" height="200">
 						</div><!-- class pull-left media-middle -->
