--- a/app/partials/update-password-form.html
+++ b/app/partials/update-password-form.html
@@ -14,6 +14,7 @@
 			<span class="validationError" ng-show="changePasswordForm.current.$error.minlength">* The current has to be a least 8 characters</span>
 			<span class="validationError" ng-show="changePasswordForm.current.$error.maxlength">* The current can't be more than 100 characters</span>
 			<span class="validationError" ng-show="changePasswordForm.current.$error.required && changePasswordForm.current.$dirty">* The current is required</span>
+			<span class="validationError" ng-show="changePasswordForm.confirm.$error.passwordcheck && changePasswordForm.confirm.$dirty">* The password is incorrect</span>
 			<span class="form-control-feedback" ng-show="changePasswordForm.current.$pending.passwordcheck"><i class="fa fa-circle-o-notch fa-spin"></i></span>
 		</div><!-- class form-group -->
 	</div><!--  class col-md-10 -->
@@ -41,7 +42,7 @@
 			<label class="control-label sr-only" for="Author"> Confirm </label>
 			<div class="input-group">
 				<span class="input-group-addon"><span class="glyphicon glyphicon-ok"></span></span>
-				<input type="password" class="form-control" ng-model="pwd.confirm" name="confirm" id="confirm" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" aria-describedby="confirmStatus" required password-match>
+				<input type="password" class="form-control" ng-model="pwd.confirm" name="confirm" id="confirm" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" aria-describedby="confirmStatus" required password-match="{{pwd.password}}">
 			</div><!-- class input-group -->
 			<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="changePasswordForm.confirm.$valid" aria-hidden="true"></span>
 			<span id="confirmStatus" class="sr-only">(success)</span>
