--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -48,17 +48,19 @@
 			<div class="row">
 				<!-- Email -->
 				<div class="col-md-5 col-md-offset-1">
-					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.email.$valid, 'has-error': !signUpForm.email.$valid && signUpForm.email.$dirty}">
+					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.email.$valid, 'has-error': signUpForm.email.$invalid && signUpForm.email.$dirty}">
 						<label class="control-label sr-only" for="Email"> Email </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-							<input type="email" class="form-control" ng-model="user.email" name="email" id="email" placeholder="Email..." ng-maxlength="255" required>
+							<input type="email" class="form-control" ng-model="user.email" name="email" id="email" placeholder="Email..." ng-maxlength="255" required email-check>
 						</div><!-- class input-group -->
 						<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.email.$valid" aria-hidden="true"></span>
 						<span id="emailStatus" class="sr-only">(success)</span>
-						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.email.$valid && signUpForm.email.$dirty" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="signUpForm.email.$invalid && signUpForm.email.$dirty && !signUpForm.email.$pending.emailcheck" aria-hidden="true"></span>
 						<span id="emailStatus" class="sr-only">(warning)</span>
 						<span class="validationError" ng-show="signUpForm.email.$error.required && signUpForm.email.$dirty">* The email address is required</span>
+						<span class="validationError" ng-show="signUpForm.email.$error.emailcheck && signUpForm.email.$dirty">* This email is already registered</span>
+						<span class="form-control-feedback" ng-show="signUpForm.email.$pending.emailcheck"><i class="fa fa-circle-o-notch fa-spin"></i>
 					</div><!-- class form-group -->
 				</div><!-- class col-md-5 col-md-offset-1 -->
 
@@ -98,44 +100,23 @@
 					</div><!-- class form-group -->
 				</div><!-- class col-md-5 col-md-offset-1 -->
 
-<<<<<<< HEAD
-					<!-- Confirmation -->
-					<div class="col-md-5">
-						<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.password_confirmation.$valid && confirm, 'has-error': (!signUpForm.password_confirmation.$valid || !confirm) && signUpForm.password_confirmation.$dirty}">
-							<label class="control-label sr-only" for="Confirm"> Confirm </label>
-							<div class="input-group">
-								<span class="input-group-addon"><span class="glyphicon glyphicon-repeat"></span></span>
-								<input type="password" class="form-control" ng-model="user.password_confirmation" name="password_confirmation" id="password_confirmation" ng-change="checkPassword(user)" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required>
-							</div><!-- class input-group -->
-							<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.password_confirmation.$valid && confirm" aria-hidden="true"></span>
-      						<span id="password_confirmationStatus" class="sr-only">(success)</span>
-      						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="(!signUpForm.password_confirmation.$valid || !confirm) && signUpForm.password_confirmation.$dirty" aria-hidden="true"></span>
-  							<span id="password_confirmationStatus" class="sr-only">(warning)</span>
- 							<span class="validationError" ng-show="signUpForm.password_confirmation.$error.minlength">* The password has to be a least 8 characters</span>
- 							<span class="validationError" ng-show="!confirm && signUpForm.password_confirmation.$dirty">* The two passwords have to match</span>
- 							<span class="validationError" ng-show="signUpForm.password_confirmation.$error.maxlength">* The password can't be more than 100 characters</span>
-						</div><!-- form-groupe -->
-					</div><!-- class col-md-5 -->
-=======
 				<!-- Confirmation -->
 				<div class="col-md-5">
-					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.password_confirmation.$valid && confirm, 'has-error': (!signUpForm.password_confirmation.$valid || !confirm) && signUpForm.password_confirmation.$dirty}">
+					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.password_confirmation.$valid, 'has-error': signUpForm.password_confirmation.$invalid && signUpForm.password_confirmation.$dirty}">
 						<label class="control-label sr-only" for="Confirm"> Confirm </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-repeat"></span></span>
-							<input type="password" class="form-control" ng-model="user.password_confirmation" name="password_confirmation" id="password_confirmation" ng-change="checkPassword(user)" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required password-validation="test">
+							<input type="password" class="form-control" ng-model="user.password_confirmation" name="password_confirmation" id="password_confirmation" ng-change="checkPassword(user)" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required password-match="{{user.password}}">
 						</div><!-- class input-group -->
-						<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.password_confirmation.$valid && confirm" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.password_confirmation.$valid" aria-hidden="true"></span>
 						<span id="password_confirmationStatus" class="sr-only">(success)</span>
-						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="(!signUpForm.password_confirmation.$valid || !confirm) && signUpForm.password_confirmation.$dirty" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="signUpForm.password_confirmation.$invalid && signUpForm.password_confirmation.$dirty" aria-hidden="true"></span>
 						<span id="password_confirmationStatus" class="sr-only">(warning)</span>
 						<span class="validationError" ng-show="signUpForm.password_confirmation.$error.minlength">* The password has to be a least 8 characters</span>
-						<span class="validationError" ng-show="!confirm && signUpForm.password_confirmation.$dirty">* The two passwords have to match</span>
+						<span class="validationError" ng-show="signUpForm.password_confirmation.$error.passwordmatch && signUpForm.password_confirmation.$dirty">* The two passwords have to match</span>
 						<span class="validationError" ng-show="signUpForm.password_confirmation.$error.maxlength">* The password can't be more than 100 characters</span>
 					</div><!-- form-groupe -->
 				</div><!-- class col-md-5 -->
->>>>>>> origin/master
-
 				<!-- Submit -->
 				<div class="col-md-4 col-md-offset-4">
 					<button class="btn btn-primary" type="submit"> Sign Up </button>
