--- a/app/partials/update-password-form.html
+++ b/app/partials/update-password-form.html
@@ -11,11 +11,11 @@
 			<span id="currentStatus" class="sr-only">(success)</span>
 			<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="changePasswordForm.current.$invalid && changePasswordForm.current.$dirty && !changePasswordForm.current.$pending.passwordcheck" aria-hidden="true"></span>
 			<span id="currentStatus" class="sr-only">(warning)</span>
+			<span class="form-control-feedback" ng-show="changePasswordForm.current.$pending.passwordcheck"><i class="fa fa-circle-o-notch fa-spin"></i></span>
 			<span class="validationError" ng-show="changePasswordForm.current.$error.minlength">* The current has to be a least 8 characters</span>
 			<span class="validationError" ng-show="changePasswordForm.current.$error.maxlength">* The current can't be more than 100 characters</span>
 			<span class="validationError" ng-show="changePasswordForm.current.$error.required && changePasswordForm.current.$dirty">* The current is required</span>
-			<span class="validationError" ng-show="changePasswordForm.confirm.$error.passwordcheck && changePasswordForm.confirm.$dirty">* The password is incorrect</span>
-			<span class="form-control-feedback" ng-show="changePasswordForm.current.$pending.passwordcheck"><i class="fa fa-circle-o-notch fa-spin"></i></span>
+			<span class="validationError" ng-show="changePasswordForm.current.$error.passwordcheck && changePasswordForm.current.$dirty">* The password is incorrect</span>
 		</div><!-- class form-group -->
 	</div><!--  class col-md-10 -->
 
