--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -10,15 +10,15 @@
 			<div class="col-md-12">
 
 				<!-- Drag & Drop Zone -->
-				<div ng-file-drop class="drop-box" ng-file-select ng-model="files" drag-over-class="dragover" allow-dir="true" accept="image/*,application/pdf">
-					<p class="dropzone lead" ng-hide="currentUser.img"> Drop or click ! <span class="glyphicon glyphicon-cloud-download"></span></p>
+				<div ng-file-drop class="drop-box" ng-file-select ng-model="files" allow-dir="true" accept="image/*,application/pdf">
+					<p class="dropzone lead" drag-over-class="dragover" ng-hide="currentUser.img"> Drop or click ! <span class="glyphicon glyphicon-cloud-download"></span></p>
 					<img class="dropImg" ng-show="currentUser.img" ng-src="{{currentUser.img}}"/>
 					<h6 class="text-info" ng-show="currentUser.img"><em>* Click on your picture / username to Edit it! </em></h6>
 				</div><!-- class drop-box -->
 
 				<!-- Username / Upadate -->
 				<p class="lead" ng-hide="updateLogin || !currentUser.username" ng-click="showInput()"> {{currentUser.username | uppercase}} </p>
-				<div class="input-group col-md-4 col-md-offset-4 loginUpdate" ng-show="updateLogin || !currentUser.username">
+				<div class="input-group col-md-4 col-md-offset-4 usernameUpdate" ng-show="updateLogin || !currentUser.username">
 					<input ng-model="user.username" value="" class="form-control lead" type="text" placeholder="New Login..."/>
 					<span class="input-group-btn">
 						<button class="btn btn-info" ng-click="loginUpdate()" type="button"><span class="glyphicon glyphicon-ok"></span></button>
@@ -33,20 +33,18 @@
 		<div class="row visible-xs">
 
 			<div class="btn-group" role="group" aria-label="...">
-				<a class="btn btn-default" data-toggle="collapse" data-target="#infos" aria-expanded="false" aria-controls="infos"> Profil Informations </a>
-				<a class="btn btn-default" data-toggle="collapse" data-target="#changePwd" aria-expanded="false" aria-controls="changePwd"> Change Password </a>
-			</div>
+				<a class="btn btn-default" ng-class="{'active': clicked1}" ng-click="clicked1 = !clicked1; clicked2 = false" aria-expanded="false" aria-controls="infos"> Profil Informations </a>
+				<a class="btn btn-default" ng-class="{'active': clicked2}" ng-click="clicked2 = !clicked2; clicked1 = false" aria-expanded="false" aria-controls="changePwd"> Change Password </a>
+			</div><!-- class btn-group -->
 
-			<div class="collapse" id="infos">
-				<div class="jumbotron">
-					<p class="text-left"> {{currentUser.firstname}} </p>
-					<p class="text-left"> {{currentUser.lastname | uppercase}} </p>
-					<p class="text-left"> {{currentUser.email}} </p>
-				</div>
-			</div>
+			<div class="jumbotron" id="infos" ng-show="clicked1">
+				<p class="text-left"> {{currentUser.firstname}} </p>
+				<p class="text-left"> {{currentUser.lastname | uppercase}} </p>
+				<p class="text-left"> {{currentUser.email}} </p>
+			</div><!-- class jumbotron -->
 
-			<div class="collapse" id="changePwd">
-				<div class="jumbotron">
+			<div class="jumbotron" id="changePwd" ng-show="clicked2">
+					
 					<form novalidate name="changePasswordForm" ng-submit="confirm && changePasswordForm.$valid && updatePassword(pwd)">
 
 						<div class="col-md-10 col-md-offset-1">
@@ -106,8 +104,8 @@
 						</div><!-- class col-md-4 col-md-offset-7 -->
 
 					</form><!-- class changePasswordForm -->
-				</div><!-- class jumbotron -->
-			</div><!-- class collapse -->
+
+			</div><!-- class jumbotron -->
 
 		</div><!-- class row visible-xs -->
 
@@ -207,7 +205,7 @@
 			</div><!-- col-md-12 -->
 		</div><!-- class row -->
 
-		<div class="row">
+		<div class="row deleteButton">
 			<div class="col-md-12">
 				<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal"> Delete Account </button>
 				<h6 class="text-danger"><em> * Account created {{currentUser.created_at}} </em></h6>
