--- a/app/partials/update-password-form.html
+++ b/app/partials/update-password-form.html
@@ -1,4 +1,4 @@
-<form novalidate name="changePasswordForm" ng-submit="confirm && changePasswordForm.$valid && updatePassword(pwd)">
+<form novalidate name="changePasswordForm" ng-submit="changePasswordForm.$valid && updatePassword(pwd)" ng-controller="UpdatePasswordCtrl">
 
 	<div class="col-md-10">
 		<div class="form-group has-feedback" ng-class="{'has-success': changePasswordForm.current.$valid, 'has-error': changePasswordForm.current.$invalid && changePasswordForm.current.$dirty}">
