--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -130,6 +130,10 @@
 			</div><!-- class row -->
 		</form><!-- named signUpForm -->
 
+		<div class="col-md-12">
+			<p class="lead fgtpwd"><a href="#/reset-password"> Forgot your password ? Click here ! </a></p>
+		</div>
+
 	</div><!-- class container -->
 
 	<div ng-show="submitted">
