--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -1,4 +1,4 @@
-<div class="container text-center background" ng-controller="RegistrarCtrl">
+<div class="container text-center" ng-controller="RegistrarCtrl">
 	<div class="container" ng-hide="submitted">
 		
 		<div class="page-header">
