--- a/app/partials/reset-password.html
+++ b/app/partials/reset-password.html
@@ -1,6 +1,22 @@
-<div ng-controller="ResetPasswordCtrl">
-	<form action="" name="resetPasswordForm" ng-submit="sendEmail(reset)" novalidate>
-		<input type="email" name="email" id="email" ng-model="reset.email">
-		<button type="submit">GO</button>
-	</form>
+<div class="container text-center"  ng-controller="ResetPasswordCtrl">
+
+	<div class="page-header">
+		<h1> Reset your password ! </h1>
+		<p class="lead"> Please enter you email adresse, we'll send you an email with a reset password link. </p>
+	</div>
+
+	<div class="col-md-4 col-md-offset-4">
+		<form action="" name="resetPasswordForm" ng-submit="sendEmail(reset)" novalidate>
+			<div class="input-group">
+				<span class="input-group-addon">
+					<span class="glyphicon glyphicon-envelope"></span>
+				</span>
+				<input type="email" name="email" class="form-control" id="email" ng-model="reset.email" required>
+				<span class="input-group-btn">
+					<button class="btn btn-default" type="submit"> Ok </button>
+				</span>
+			</div><!-- class input-group -->
+		</form>
+	</div>
+
 </div>
