--- a/app/partials/reset-password.html
+++ b/app/partials/reset-password.html
@@ -1,5 +1,5 @@
 <div ng-controller="ResetPasswordCtrl">
-	<form action="" name="resetPasswordForm" ng-submit="sendEmail(reset)" novalidate>
+	<form name="resetPasswordForm" ng-submit="sendEmail(reset)" novalidate>
 		<input type="email" name="email" id="email" ng-model="reset.email">
 		<button type="submit">GO</button>
 	</form>
